# POSIX-Shell

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.h
src/ast/nodes/and_or/: and_or_node.c  and_or_node.h
src/ast/nodes/assignment/: assign_node.c  assign_node.h
src/ast/nodes/case/: case_node.h
src/ast/nodes/command_list/: command_list_node.c  command_list_node.h
src/ast/nodes/compound_list/: compound_list_node.c  compound_list_node.h
src/ast/nodes/for/: for_node.c  for_node.h
src/ast/nodes/if/: if_node.c  if_node.h
src/ast/nodes/loop/: loop_node.c  loop_node.h
src/ast/nodes/negation/: negation_node.c  negation_node.h
src/ast/nodes/pipeline/: pipeline_node.c  pipeline_node.h
src/ast/nodes/redirections/: redirect_node.c  redirect_node.h
src/ast/nodes/root/: root_node.c  root_node.h
src/ast/nodes/simple_command/: simple_command_node.c  simple_command_node.h  word_types.h
src/cmds/: Makefile.am
src/cmds/cd/: cd.c  cd.h
src/cmds/dot/: dot.c  dot.h
src/cmds/echo/: echo.c  echo.h
src/cmds/export/: export.c  export.h
src/cmds/false/: false.c  false.h
src/cmds/redirections/: file_read_write.c  file_to_stdout.c  redirection_utils.h  stdout_to_file.c  stdout_to_file_force.c
src/cmds/true/: true.c  true.h
src/cmds/var/: context.c  context.h  expand_var.c  expand_var.h  expand_var_utils.c  expand_var_utils.h  var.c  var.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h  token.h
src/lexer/helpers/: alias_and_variables.c  keywords_lex.c  operators_lex.c  pipe_grouping_lex.c  redirect_lex.c  string_lex.c
src/parser/: Makefile.am  command.c  input.c  parser.h  structures.c
src/utils/: Makefile.am  truand.c  truand.h  utils.c  utils.h
tests/: memoryleak.sh  step1.yml  step2.yml  testsuite.sh
